--- a/task-manager/src/app/edit-task-popup/edit-task-popup.component.html
+++ b/task-manager/src/app/edit-task-popup/edit-task-popup.component.html
@@ -13,9 +13,7 @@
 
       <label for="priority">Priority</label>
       <select id="priority" [(ngModel)]="task.priority" name="priority" required >
-        <option value="High">High</option>
-        <option value="Moderate">Moderate</option>
-        <option value="Low">Low</option>
+        <option *ngFor="let priority of priorities" [value]="priority">{{ priority }}</option>
       </select>
 
       <div class="buttons">
