--- a/task-manager/src/app/add-task-popup/add-task-popup.component.html
+++ b/task-manager/src/app/add-task-popup/add-task-popup.component.html
@@ -13,7 +13,9 @@
   
         <label for="priority">Priority</label>
         <select id="priority" [(ngModel)]="task.priority" name="priority" required>
-          <option *ngFor="let priority of priorities" [value]="priority">{{ priority }}</option>
+          @for (priority of priorities; track $index) {
+            <option [value]="priority">{{ priority }}</option>
+          }
         </select>
   
         <div class="buttons">
