--- a/task-manager/src/app/home/home.component.html
+++ b/task-manager/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<!--home.component.html-->
+<!--home.component.html /// change for twoSplit-->
 <div class="home-container">
   <div class="task-management-title">
     <i class="fa-solid fa-list-check"></i> Task Management 
